# jibrel_test_assignment

./: README.md  analyzer.py  custom_types.py  jibrel.py  log_analyzer.py  log_parser.py  pip-requirements.txt  pyproject.toml  setup.cfg
.github/: dependabot.yml
logs/: README.md
