[build-system]
requires = ["poetry==0.12.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "jibrel-test-assignment"
version = "0.0.1"
description = ""
readme = "README.md"
authors = ["Dima Boger"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.8.1"
mypy = "^0.701.0"
dephell = "^0.7.3"


[tool.dephell.main]
# we use dephell for convert from poetry to pip-requirements.txt like in task description
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "pip", path = "pip-requirements.txt"}
envs = ["dev"]
